# Novelflow

./: .gitignore  LICENSE  README.md  build_installer.bat  launch_gui.bat  novelflow-gui.spec  pyproject.toml
installer/: Novelflow.iss
scripts/: download_sample_pdfs.py  generate_icon.py
src/: convert.py
src/novelflow/: __init__.py  __main__.py  audio_merge.py  audiobook.py  book_structure.py  cli.py  convert.py  cover_art.py  gui.py  gui_audiobook_tab.py  gui_document_tab.py  gui_entry.py  gui_jobs.py  gui_player_tab.py  gui_settings.py  gui_theme.py  paths.py  pdf_extract.py  pdf_italics.py  player.py  refine.py  text_cleanup.py  tts_config.py  tts_engines.py  tts_text.py  tts_voices.py  user_paths.py
tests/: test_book_structure.py  test_cover_art.py  test_integration_pdfs.py  test_pdf_cover.py  test_refine.py  test_refine_sanitize_integration.py  test_text_cleanup.py  test_tts_text.py
