[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novelflow"
version = "0.1.0"
description = "Convert PDF novels to readable markdown in one command."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pdf", "markdown", "pymupdf", "ebook", "fiction"]
authors = [{ name = "Novelflow" }]
dependencies = [
    "pymupdf>=1.24.0",
]

[project.scripts]
novelflow = "novelflow.cli:main"
novelflow-gui = "novelflow.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/novelflow"]

[tool.hatch.build.targets.wheel.force-include]
"src/novelflow/assets/icon.ico" = "novelflow/assets/icon.ico"
"src/novelflow/assets/icon.png" = "novelflow/assets/icon.png"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["pytest>=8.0"]
